Update title in <head>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Roboto:ital,wght@0,400;0,700;1,100&display=swap"
       rel="stylesheet"
     />
-    <title>Pirates and Cheese</title>
+    <title>Cheese, Space and Pirates</title>
   </head>
   <body>
     <h1>Heading 1</h1>
